--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>2.0.45</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+
+
 
     </dependencies>
 
