--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 server:
   port: 8090
+  servlet:
+    session:
+      timeout: 120m
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/ec^3?useSSL=false&amp;serverTimezone=GMT%2B8&amp;useUnicode=true&amp;characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/ec^3?useSSL=false&serverTimezone=GMT&useUnicode=true&characterEncoding=utf8
     username: root
     password: wayne
     driver-class-name: com.mysql.cj.jdbc.Driver
